--- a/finchack2017/Base.lproj/Main.storyboard
+++ b/finchack2017/Base.lproj/Main.storyboard
@@ -250,7 +250,7 @@
                                     </button>
                                 </subviews>
                             </view>
-                            <visualEffectView opaque="NO" alpha="0.40000000000000002" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WVl-Wj-SW4">
+                            <visualEffectView opaque="NO" alpha="0.55000000000000004" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WVl-Wj-SW4">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" id="yry-hz-s4J">
@@ -335,7 +335,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
             </objects>
-            <point key="canvasLocation" x="169" y="2405"/>
+            <point key="canvasLocation" x="137" y="2842"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="IGT-c8-B6p">
@@ -458,7 +458,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Bbv-sH-7rU">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bbv-sH-7rU">
                                 <rect key="frame" x="0.0" y="20" width="375" height="603"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1cF-DE-XdV">
@@ -676,6 +676,6 @@
         <image name="tiffany" width="319" height="76"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="EZn-Oj-CR7"/>
+        <segue reference="t6R-uw-zj6"/>
     </inferredMetricsTieBreakers>
 </document>
